# 2-Fast-2-Json

./: Cargo.toml  LICENCE  README.md
.github/workflows/: build-v1.yml  buildv1.yml
benches/: benches.rs  large-file-bench.rs
src/: lib.rs  main.rs
