[package]
name = "twojson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde_json = "1.0"
rayon = "1.6.1"
clap = { version = "4.1.8", features = ["derive"] }
chrono = "0.4.23"
colored = "2.0.0"

